--- a/KotaPalace/Resources/layout/order_row - Copy.xml
+++ b/KotaPalace/Resources/layout/order_row - Copy.xml
@@ -73,20 +73,6 @@
                 android:layout_height="1dp"
                 app:layout_constraintTop_toBottomOf="@+id/row_price"/>
 
-            <androidx.appcompat.widget.AppCompatImageView
-                android:id="@+id/row_menuIcon"
-                android:layout_height="204dp"
-                android:layout_width="match_parent"
-                android:layout_marginTop="8dp"
-                android:scaleType="centerCrop"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/top_view"
-                android:src="@drawable/ic_account_circle_black_18dp"
-                tools:ignore="ContentDescription"
-                app:elevation="3dp" />
-
             <View
                 android:id="@+id/bottom_view"
                 android:layout_width="match_parent"
@@ -94,40 +80,10 @@
                 android:layout_marginTop="5dp"
                 app:layout_constraintTop_toBottomOf="@+id/row_menuIcon"/>
 
-            <com.google.android.material.chip.ChipGroup
-                android:minWidth="25dp"
-                android:minHeight="25dp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/AddOnsChips"
-                android:layout_marginStart="8dp"
-                android:layout_marginEnd="8dp"
-                app:singleLine="false"
-                app:singleSelection="true"
-                app:chipSpacingHorizontal="1dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="1.0"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/bottom_view" />
-
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:layout_constraintTop_toBottomOf="@+id/AddOnsChips">
-
-                <com.google.android.material.button.MaterialButton
-                    android:id="@+id/row_btn_update"
-                    android:layout_width="wrap_content"
-                    android:layout_height="40dp"
-                    android:layout_marginBottom="12dp"
-                    android:layout_marginStart="12dp"
-                    android:layout_marginTop="8dp"
-                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
-                    app:strokeColor="@color/gray"
-                    android:text="update"
-                    android:textColor="@color/gray"
-                    android:textStyle="normal"
-                    android:layout_toStartOf="@+id/row_btn_delete"/>
+                app:layout_constraintTop_toBottomOf="@+id/row_price">
 
                 <com.google.android.material.button.MaterialButton
                     android:id="@+id/row_btn_delete"
@@ -137,10 +93,10 @@
                     android:layout_marginStart="12dp"
                     android:layout_marginEnd="12dp"
                     android:layout_marginTop="8dp"
-                    app:strokeColor="@color/red"
+                    app:strokeColor="@color/gray"
                     style="@style/Widget.MaterialComponents.Button.OutlinedButton"
-                    android:text="delete"
-                    android:textColor="@color/red"
+                    android:text="view"
+                    android:textColor="@color/gray"
                     android:textStyle="normal"
                     android:layout_alignParentEnd="true"/>
 
