--- a/KotaPalace/Resources/layout/order_row.xml
+++ b/KotaPalace/Resources/layout/order_row.xml
@@ -1,62 +1,99 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.material.card.MaterialCardView 
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_marginTop="10dp"
-    android:layout_marginStart="10dp"
-    android:layout_marginEnd="10dp"
-    app:cardPreventCornerOverlap="false"
-    app:cardElevation="8dp">
+    android:background="#dcdcdc"
+    android:paddingBottom="5dp"
+    android:paddingTop="5dp">
 
-    <RelativeLayout
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        tools:ignore="MissingConstraints"
+        android:layout_marginEnd="10dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:background="@color/white">
 
-        <ImageView
-            android:id="@+id/user_image"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:layout_marginStart="5dp"
-            android:layout_centerVertical="true"
-            android:contentDescription=""
-            />
-
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_centerVertical="true"
-            android:layout_margin="5dp"
-            android:layout_toEndOf="@id/user_image"
-            android:layout_toStartOf="@id/view_btn">
+            android:layout_height="wrap_content">
+
+            <!--<androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/row_order_image"
+                android:layout_width="90dp"
+                android:layout_height="90dp"
+                android:src="@drawable/ic_account_circle_black_18dp"/>-->
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_centerVertical="true"
+                android:layout_toEndOf="@+id/row_order_no">
+
+                <com.google.android.material.textview.MaterialTextView
+                    android:id="@+id/row_order_id"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginStart="10dp"
+                    android:text="Order no:"
+                    android:textStyle="bold"
+                    android:textSize="16sp"
+                    android:textAllCaps="true"
+                    />
+
+                <com.google.android.material.textview.MaterialTextView
+                    android:id="@+id/row_order_status"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="10dp"
+                    android:text="Status"
+                    android:textColor="@color/price_color"
+                    />
+                <com.google.android.material.textview.MaterialTextView
+                    android:id="@+id/row_order_date"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="10dp"
+                    android:text="Date"
+                    android:textColor="@color/gray"
+                    />
+            </LinearLayout>
 
             <com.google.android.material.textview.MaterialTextView
-                android:id="@+id/customer_id"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                />
+                android:id="@+id/row_order_no"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:layout_marginStart="10dp"
+                android:layout_margin="10dp"
+                android:text="id"
+                android:textColor="@color/black"
+                android:gravity="center"
+                android:background="@drawable/button_bg"
+                android:layout_alignParentEnd="false"/>
 
-            <com.google.android.material.textview.MaterialTextView
-                android:id="@+id/order_status"
-                android:layout_width="match_parent"
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/view_btn"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                />
-        </LinearLayout>
+                android:layout_alignParentEnd="true"
+                android:layout_centerVertical="true"
+                android:layout_marginStart="5dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginEnd="5dp"
+                android:layout_marginBottom="5dp"
+                android:text="check" />
+        </RelativeLayout>
 
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/view_btn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/customer_id"
-            android:layout_alignParentEnd="true"
-            android:layout_centerVertical="true"
-            android:layout_marginStart="5dp"
-            android:layout_marginTop="5dp"
-            android:layout_marginEnd="5dp"
-            android:layout_marginBottom="5dp"
-            android:text="view" 
-           />
-    </RelativeLayout>
-</com.google.android.material.card.MaterialCardView>
+    </androidx.cardview.widget.CardView>
+
+</RelativeLayout>
