--- a/KotaPalace/Resources/layout/prepare_orders_fragment_tab.xml
+++ b/KotaPalace/Resources/layout/prepare_orders_fragment_tab.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<com.facebook.shimmer.ShimmerFrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:id="@+id/shimmerFrameLayout1">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/orders_rv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         />
-</RelativeLayout>
+</com.facebook.shimmer.ShimmerFrameLayout>
