--- a/KotaPalace/Resources/layout/prepare_orders_fragment_tab.xml
+++ b/KotaPalace/Resources/layout/prepare_orders_fragment_tab.xml
@@ -1,14 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.facebook.shimmer.ShimmerFrameLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:id="@+id/shimmerFrameLayout1">
+    android:layout_height="match_parent">
+
+    <com.facebook.shimmer.ShimmerFrameLayout
+        android:id="@+id/shimmerFrameLayout1"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/orders_rv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         />
-</com.facebook.shimmer.ShimmerFrameLayout>
+</RelativeLayout>
