--- a/KotaPalace/Resources/layout/fragment_report.xml
+++ b/KotaPalace/Resources/layout/fragment_report.xml
@@ -14,6 +14,13 @@
         android:textAllCaps="true"
         android:layout_centerHorizontal="true"/>
 
+    <androidx.appcompat.widget.MenuPopupWindow.MenuDropDownListView
+        android:id="@+id/chart_type"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        
+        />
+
     <microcharts.droid.ChartView
         android:id="@+id/chartReport"
         android:layout_width="match_parent"
