--- a/KotaPalace/Resources/layout/fragment_report.xml
+++ b/KotaPalace/Resources/layout/fragment_report.xml
@@ -5,21 +5,15 @@
     android:layout_height="match_parent">
 
     <com.google.android.material.textview.MaterialTextView
+        android:id="@+id/header"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:text="report"
-        android:textSize="18sp"
+        android:textSize="20sp"
         android:textStyle="bold"
         android:textAllCaps="true"
         android:layout_centerHorizontal="true"/>
-
-    <androidx.appcompat.widget.MenuPopupWindow.MenuDropDownListView
-        android:id="@+id/chart_type"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        
-        />
 
     <microcharts.droid.ChartView
         android:id="@+id/chartReport"
@@ -27,13 +21,31 @@
         android:layout_height="350dp" 
         android:layout_centerInParent="true"/>
 
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/BtnGetReport"
-        android:layout_width="wrap_content"
+    <RelativeLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="get report"
         android:layout_above="@id/footer"
-        android:layout_centerHorizontal="true"/>
+        android:gravity="center">
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/btn_chart_type"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_below="@+id/header"
+            android:text="graph type"
+            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+        />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/BtnGetReport"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="get report"
+            android:layout_centerHorizontal="true"
+            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+            />
+    </RelativeLayout>
 
     <com.google.android.material.textview.MaterialTextView
         android:id="@+id/footer"
@@ -41,7 +53,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:layout_marginBottom="20dp"
-        android:text="@Kota Palace"
+        android:text="Kota Palace @2022 corporation"
         android:textAllCaps="false"
         android:layout_centerHorizontal="true"
         android:layout_alignParentBottom="true"/>
