--- a/KotaPalace/Resources/layout/activity_main.xml
+++ b/KotaPalace/Resources/layout/activity_main.xml
@@ -82,6 +82,19 @@
                 app:bt_title="Report"
                 app:bt_padding="10dp"
                 app:bt_titlePadding="5dp"/>
+
+            <com.gauravk.bubblenavigation.BubbleToggleView
+                android:id="@+id/item_admin"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:bt_active="true"
+                app:bt_colorActive="@color/green_active"
+                app:bt_colorInactive="@color/green_inactive"
+                app:bt_icon="@drawable/user"
+                app:bt_shape="@drawable/transition_background_drawable_home"
+                app:bt_title="Admin"
+                app:bt_padding="10dp"
+                app:bt_titlePadding="5dp"/>
         </com.gauravk.bubblenavigation.BubbleNavigationLinearView>
     </androidx.cardview.widget.CardView>
 </RelativeLayout>
