--- a/KotaPalace/Resources/layout/order_items_row.xml
+++ b/KotaPalace/Resources/layout/order_items_row.xml
@@ -28,7 +28,8 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:layout_centerVertical="true"
-            android:layout_margin="5dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
             android:layout_toEndOf="@+id/order_item_quantity">
 
             <com.google.android.material.textview.MaterialTextView
